adjust style of buttun

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    IP Address Tracker
+
+    Search for any IP address or domain
+  
+    IP Address
+    Location
+    Timezone
+      UTC <!-- add offset value dynamically using the API -->
+    ISP
+    
    
   </body>
 </html>
